testsuite/features/run-pass/freeze.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class A { f: (A & mut) | (None & imm); }

class Main
{

  main() {
    var x = new A;
    var y = new A in x;
    y.f = None.create();
    x.f = y;

    x = Builtin.freeze(x);

    // CHECK-L: A
    Main.print_imm(x);
  }

  print_imm[X](x: X & imm)
  {
    Builtin.print1("{}\n", x);
  }
}
